2003-03-27  Andreas Kupries  <andreask@activestate.com>

	* cvs.man:
	* cvs.tcl: Added code to handle parsing and reformatting of cvs
	  log files. Origin of the code the tcl'ers wiki, page
	  http://wiki.tcl.tk/log2changelog. The actual original author is
	  unknown (not listed on the wiki).

2003-03-24  Andreas Kupries  <andreask@activestate.com>

	* doctools_fmt.man: Fixed documentation bug #704187 reported by
	  Roy Terry <royterry@users.sourceforge.net>.

2003-03-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* checker.tcl:        Fixed incorrect signature of 'usage'.
	* mpformats/fmt.null: Bugfix in naming of the procedures.

2003-03-13  Andreas Kupries  <andreask@activestate.com>

	* mpformats/_common.tcl: Fixed initialization error for
	  cross-references causing unwanted suppression (leakage of
	  definitions between multiple pages).

	* doctoc.tcl:   Bug fixes in three return statemments.
	* docidx.tcl:   (return -code error string, not return -code string)
	* doctools.tcl: 

2003-03-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mpformats/fmt.html:  Rewrite handling of [keywords] and
	* mpformats/fmt.latex: [see_also] to behave like for the TMML
	* mpformats/fmt.list:  formatter: Collect all keywords and
	* mpformats/fmt.nroff: x-references during the first pass, insert
	* mpformats/fmt.wiki:  the results during the second pass, in
	                       [manpage_end]. Ensures that at most one
			       see_also / keyword section is present,
			       ensures uniform order and handling of
			       multiple keyword / see_also commands is
			       now uniform too.

	* examples/doctools.idx: Moved to the new examples/doctools
	* examples/doctools.toc: directory. Thanks to Larry Virden
		                 <lvirden@users.sourceforge.net> for
	                         pointing out that the original location
				 in the doctools module violated the
				 principle of collecting examples in a