@@ -12,3 +12,4 @@ if {![package vsatisfies [package provide Tcl] 8.2]} {return}
 package ifneeded doctools      1.0 [list source [file join $dir doctools.tcl]]
 package ifneeded doctools::toc 0.1 [list source [file join $dir doctoc.tcl]]
 package ifneeded doctools::idx 0.1 [list source [file join $dir docidx.tcl]]
+package ifneeded doctools::cvs 0.1 [list source [file join $dir cvs.tcl]]
